--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "https://github.com/ReinoutvdG/LU1.2_Frameworks/issues"
   },
   "homepage": "https://github.com/ReinoutvdG/LU1.2_Frameworks#readme",
-  "dependencies": {
+  "devDependencies": {
+    "cypress": "^15.5.0"
   }
 }
